--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </div>
                             <div class="content">
                                 <span class="price">
-                                    <a href="*">Vivaan Moda</a>
+                                    <a href="*">Pranav Chandra</a>
                                 </span>
                                 <span class="des">
                                     <p>Presentation Designer</p>
@@ -492,5 +492,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/CSSRulePlugin.min.js"></script>
     <script src="main.js"></script>
 </body>
+
 
 </html>
