--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="right">
                 <h3>About Us</h3>
 
-                <h1>At The Debris Watcher, we focus on tracking real-time space debris to help users monitor orbital hazards with precision. Our platform delivers up-to-date information on debris locations, providing a reliable tool for understanding and addressing the growing challenge of space debris in Earth's orbit.
+                <h1>At Debris Watch, we focus on tracking real-time space debris to help users monitor orbital hazards with precision. Our platform delivers up-to-date information on debris locations, providing a reliable tool for understanding and addressing the growing challenge of space debris in Earth's orbit.
                 </h1>
 
                 <!-- <h1> Discover our diverse expertise,<br>
@@ -495,4 +495,5 @@
 
 
 </html>
+
 
