--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
     <div class="section7" id="section7">
         <div class="seven">
-            <h4><span style="font-weight: bolder; color: #000;">&copy; 2024 Space Debris Tracker. All rights reserved.</span></h4>
+            <h4><span style="font-weight: bolder; color: #000;">&copy; 2025 Debris Watch. All rights reserved.</span></h4>
 
             <div class="follow">
                 <div class="box">
@@ -495,5 +495,6 @@
 
 
 </html>
+
 
 
